--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ PlateformInballBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
