--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,8 +7,7 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-
+        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH , ROLE_COACH, ROLE_PLAYER , ROLE_DIRIGEANT]
 
     providers:
         main:
