--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,10 +25,11 @@ security:
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
+                default_target_path: /accueil
             logout: 
                 path:   fos_user_security_logout
                 target: /accueil
-            remember_me:
+            remember_me: 
                 key: tokenprive
                 
         
